--- a/individual_work/madera-2c-web-figma-1/styles/style.css
+++ b/individual_work/madera-2c-web-figma-1/styles/style.css
@@ -60,6 +60,9 @@ h2 {
         -ms-flex-align: center;
             align-items: center;
   }
+  .expanded-menu {
+    display: none;
+  }
   .logo {
     margin-left: 8%;
     height: 100%;
@@ -247,9 +250,69 @@ h2 {
             justify-content: center;
     justify-items: center;
     text-align: center;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
   .footer h2 {
     font-size: 0.75rem;
+  }
+  .contact-container-0 {
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .gray-button-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .gray-button-3 .my-existance-is-miserable {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 20%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    width: 40%;
+  }
+  .gray-button-3 .my-existance-is-miserable h2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    font-size: .688;
   }
   #contact-headline {
     display: -webkit-box;
@@ -274,6 +337,15 @@ h2 {
   .content {
     width: 100%;
     height: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
   }
   .contact-container {
     display: -webkit-box;
@@ -313,6 +385,143 @@ h2 {
     padding: 2%;
     padding-right: 50%;
   }
+  .info-content {
+    height: 80vh;
+  }
+  .parent {
+    margin-top: 10%;
+    margin-left: 15%;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[5];
+        grid-template-columns: repeat(5, 1fr);
+    -ms-grid-rows: (1fr)[6];
+        grid-template-rows: repeat(6, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 10%;
+  }
+  .parent h3 {
+    font-size: 0.75rem;
+  }
+  .parent :nth-child(1) {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    text-align: center;
+  }
+  .info-headline {
+    height: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .div1 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .div2 {
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 1 / 2 / 2 / 5;
+  }
+  .div3 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  .div4 {
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 2 / 2 / 3 / 5;
+  }
+  .div5 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 3 / 1 / 4 / 2;
+  }
+  .div6 {
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 3 / 2 / 4 / 5;
+  }
+  .div7 {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 4 / 1 / 5 / 2;
+  }
+  .div8 {
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 4 / 2 / 5 / 5;
+  }
+  .div9 {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 5 / 1 / 6 / 2;
+  }
+  .div10 {
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 5 / 2 / 6 / 5;
+  }
+  .div11 {
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-area: 6 / 1 / 7 / 2;
+  }
+  .div12 {
+    -ms-grid-row: 6;
+    -ms-grid-row-span: 1;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 3;
+    grid-area: 6 / 2 / 7 / 5;
+  }
 }
 
 @media screen and (min-width: 481px) {
@@ -334,6 +543,14 @@ h2 {
         -ms-flex-align: center;
             align-items: center;
   }
+  .expanded-menu {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .expanded-menu a h3 {
+    text-decoration: none;
+  }
   .logo {
     margin-left: 8%;
     height: 100%;
@@ -342,160 +559,7 @@ h2 {
     height: 100%;
   }
   .burger {
-    margin-top: 5%;
-    height: 50%;
-    margin-right: 15%;
-  }
-  .container {
-    background-color: rgba(248, 247, 236, 0.5);
-  }
-  .container .gray-button-2 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 40%;
-    background-color: #7C7474;
-    color: #F8F7EC;
-    margin-bottom: 20%;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-bottom: 2%;
-    padding-top: 2%;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: center;
-  }
-  .container .gray-button-2 h2 {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: center;
-    font-size: .688;
-  }
-  .gray-button {
-    background-color: rgba(248, 247, 236, 0.3);
-    color: #F8F7EC;
-    margin-bottom: 5%;
-    padding-left: 10%;
-    padding-right: 10%;
-    padding-top: 2%;
-  }
-  .gray-button h2 {
-    font-size: .688;
-  }
-  .gray-box {
-    margin-top: 15%;
-    margin-left: 10%;
-    margin-right: 10%;
-    background-color: #7C7474;
-    color: #F8F7EC;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: center;
-    padding: 5%;
-  }
-  .gray-box .gray-text-box {
-    margin: 5%;
-    font-size: 0.813rem;
-  }
-  .index-second-half {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 100vw;
-  }
-  .index-second-half .headline-3 {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    width: 100%;
-    font-size: 0.688rem;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    justify-items: center;
-    margin-top: 10%;
-    margin-bottom: 10%;
-  }
-  .index-second-half .offer-container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    width: 100vw;
-  }
-  .index-second-half .offer-container .image-column {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 35%;
-    margin-left: 10%;
-    margin-right: 5%;
-  }
-  .index-second-half .offer-container .image-column img {
-    margin-bottom: 15%;
-  }
-  .index-second-half .offer-container .text-column {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 65%;
-  }
-  .index-second-half .offer-container .text-column h3 {
-    font-size: 0.75rem;
-  }
-  .index-second-half .offer-container .text-column p {
-    font-size: 0.625rem;
-  }
-  .index-second-half .offer-container .text-column :nth-child(1) {
-    margin-top: 5%;
-  }
-  .index-second-half .offer-container .text-column .offer-text {
-    margin-bottom: 25%;
+    display: none;
   }
   .footer {
     display: -webkit-box;
@@ -521,9 +585,69 @@ h2 {
             justify-content: center;
     justify-items: center;
     text-align: center;
+    -ms-flex-item-align: end;
+        align-self: flex-end;
   }
   .footer h2 {
     font-size: 0.75rem;
+  }
+  .contact-container-0 {
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .gray-button-3 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+  }
+  .gray-button-3 .my-existance-is-miserable {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    background-color: #7C7474;
+    color: #F8F7EC;
+    margin-bottom: 20%;
+    padding-left: 2%;
+    padding-right: 2%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+    width: 40%;
+  }
+  .gray-button-3 .my-existance-is-miserable h2 {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
+    font-size: .688;
   }
   #contact-headline {
     display: -webkit-box;
@@ -548,6 +672,15 @@ h2 {
   .content {
     width: 100%;
     height: 100%;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -ms-flex-line-pack: center;
+        align-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    justify-items: center;
   }
   .contact-container {
     display: -webkit-box;
