--- a/individual_work/zaverecna-prace/style.css
+++ b/individual_work/zaverecna-prace/style.css
@@ -1,1 +1,82 @@
-/* No CSS *//*# sourceMappingURL=style.css.map */
+.bg-primary {
+  background-color: #970c0cea;
+}
+
+.container-1 {
+  width: 100vw;
+  height: 100vh;
+}
+
+.container-1 .big-image {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 89.5%;
+  background-image: url(/images/food.png);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-size: cover;
+}
+
+.container-1 .big-image .headline {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 80%;
+  margin-bottom: 15%;
+  background-color: rgba(255, 255, 255, 0.39);
+  padding: 20px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.container-1 .big-image .headline h1 {
+  font-size: 5rem;
+}
+
+.container-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100vw;
+  height: 400vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  justify-items: center;
+  background-color: #FBD1A2;
+}
+
+.container-2 .food h2 {
+  font-size: 3rem;
+  text-align: center;
+}
+
+.container-2 .food h2 {
+  font-size: 3rem;
+  text-align: center;
+}
+/*# sourceMappingURL=style.css.map */
