--- a/individual_work/zaverecna-prace/style.css
+++ b/individual_work/zaverecna-prace/style.css
@@ -60,7 +60,7 @@
       -ms-flex-direction: column;
           flex-direction: column;
   width: 100vw;
-  height: 400vh;
+  height: 385vh;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -78,5 +78,28 @@
 .container-2 .food h2 {
   font-size: 3rem;
   text-align: center;
+}
+
+.container-2 .footer {
+  margin-top: 1%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  height: 10%;
+  background-color: #970c0cea;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  justify-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.container-2 .footer a {
+  color: black;
 }
 /*# sourceMappingURL=style.css.map */
