--- a/individual_work/zaverecna-prace/style.scss
+++ b/individual_work/zaverecna-prace/style.scss
@@ -41,7 +41,7 @@
     display: flex;
     flex-direction: column;
     width: 100vw; 
-    height: 400vh;
+    height: 385vh;
     align-items: center;
     align-content:center ;
     justify-items: center;
@@ -62,6 +62,23 @@
         {
             font-size: 3rem;
             text-align: center;
+        }
+    }
+
+    .footer
+    {
+        margin-top: 1%;
+        display: flex;
+        width: 100%;
+        height: 10%;
+        background-color:#970c0cea;
+        align-items: center;
+        align-content: center;
+        justify-items: center;
+        justify-content: center;
+        a
+        {
+            color: black;
         }
     }
 }
